--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_screenutil: ^5.5.3+2
   flutter_switch: ^0.3.2
+  flutter_svg: ^1.1.0
 
 dev_dependencies:
   flutter_test:
