--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   flutter_switch: ^0.3.2
   flutter_svg: ^1.1.0
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
