--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   http: ^0.13.4
   google_fonts: ^2.1.0
   flutter_screenutil: ^5.5.3+2
-
+  shared_preferences: ^2.0.15
+  smooth_page_indicator: ^1.0.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
